grammar.js
    config: $ => repeat($._top_item),

    // Hidden newline token. Because `\n` is not in `extras`, inter-item
    // newlines must be consumed explicitly; this rule (hidden, so it does not
    // appear in the AST) is mixed into `_top_item` / `_body_item` / `_item` so
    // every multi-line repeat can absorb blank/separator lines uniformly.
    _nl: $ => /\n+/,

    // Top-level dispatch. This is the old `_item` (j2 + ios + output + comment +
    // text) with the new `section` added on top. `_j2_statement` is kept here so
    // top-level jinja statements (e.g. a bare `{% for %}...{% endfor %}`) keep
    // parsing exactly as before.
    _top_item: $ => choice(
      $._nl,
      $.section,
      $._j2_statement,
      $._ios_statement,
      $.output,
      $.comment,
      $.text,
    ),

    // Kept for the jinja statement bodies below; unchanged so their emitted AST
    // stays byte-identical. Includes `section` so a jinja body (e.g. a
    // `{% for %}` loop) can contain an `interface_section` / `router_section`.
    // `_nl` consumes inter-item newlines (since `\n` is no longer an extra).
    interface_section: $ => seq(
      $.interface_header,
      repeat(choice($._nl, $._body_item)),
      $.eos,
    ),

    _body_item: $ => choice(
      $.section,
      $.negated_statement,
      $._command,
      $.output,
      $.comment,
      $.text,
      // NOTE: `eos` is deliberately excluded so a section consumes its own
      // terminating `!` rather than the body eating it.
    ),

    // Bare command set — NO field wrappers and NO negated_statement, so the
    // generic `negated_statement` can wrap any of these without recursion.
    // `command_line` is the generic fallback that structures every word-leading
    // line; specific commands above it win via their `token(prec(2, ...))`
    // keywords (hostname/version/service tokenize as the keyword, not as
    // `identifier`).
    _command: $ => choice(
      $.hostname_statement,
      $.version_statement,
      $.service_statement,
      $.description_statement,
      $.shutdown_statement,
      $.speed_statement,
      $.duplex_statement,
      $.mtu_statement,
      $.address_family_statement,
      $.neighbor_statement,
      $.network_statement,
      $.redistribute_statement,
      $.passive_interface_statement,
      $.router_id_statement,
      $.exit_address_family_statement,
      $.metric_style_statement,
      $.graceful_restart_statement,
      $.queue_depth_statement,
      $.compatible_statement,
      $.auto_cost_statement,
      $.aggregate_address_statement,
      $.af_interface_statement,
      $.autonomous_system_statement,
      $.maximum_prefix_statement,
      $.summary_prefix_statement,
      $.default_information_statement,
      $.distribute_list_statement,
      $.area_statement,
      $.eigrp_router_statement,
      $.snmp_server_statement,
      $.scheduler_statement,
      $.hw_module_statement,
      $.memory_statement,
      $.rtr_statement,
      $.exception_statement,
      $.subscriber_statement,
      $.mac_address_table_statement,
      $.kerberos_statement,
      $.boot_statement,
      $.tacacs_server_statement,
      $.parser_statement,
      $.bfd_statement,
      // --- config-line rich rules (see comment block above `negated_statement`)
      $.exec_timeout_statement,
      $.login_statement,
      $.password_statement,
      $.transport_statement,
      $.access_class_statement,
      $.terminal_type_statement,
      $.length_statement,
      $.width_statement,
      $.editing_statement,
      $.motd_banner_statement,
      $.escape_character_statement,
      $.activation_character_statement,
      $.databits_statement,
      $.parity_statement,
      $.padding_statement,
      $.stopbits_statement,
      // --- access-list rich rules (ACE permit/deny; see comment block above
      // `permit_statement` — these are the line-starting first token of every
      // config-(ext|std|ipv6|ext-macl)-nacl / config-source-guard ACE line)
      $.permit_statement,
      $.deny_statement,
      // --- numbered access-list flat statement (see comment block above
      // `access_list_statement` — this is the leading keyword of every
      // numbered config ACL line `access-list <N> permit|deny ...`)
      $.access_list_statement,
      // --- rich misc rules (match/set/class + vlan/pmap-c/redundancy/route-map;
      // see comment block above `match_statement` for the GENERIC rationale and
      // the per-keyword deferred notes)
      $.match_statement,
      $.set_statement,
      $.class_statement,
      $.remote_span_statement,
      $.private_vlan_statement,
      $.police_statement,
      $.priority_statement,
      $.drop_statement,
      $.random_detect_statement,
      $.auto_sync_statement,
      $.continue_statement,
      $.command_line,
    ),

    // Generic command line: a leading identifier (the first keyword token) plus
    // zero or more args. Multi-word command identity is resolved downstream by
    // the LSP against data/commands.json — NOT by the AST — so only the first
    // token is captured as `name`. `_cmd_arg` deliberately excludes
    // `interface_name` (which overlaps `value` and creates lexical ambiguity).
    //
    // `prec.right` makes the rule right-associative, so a shift/reduce conflict
    // where the next token could either extend this command_line (e.g. an arg
    // that is itself an `output`/`{{...}}`) or begin a sibling item resolves by
    // shifting — i.e. the longer match wins and the token stays inside args.
    //
    // Line-bound: because `\n` is NOT in `extras` (see top of file), the
    // `repeat(arg)` cannot drift across a newline — `value`/`output`/`identifier`
    // all exclude `\n`, so the repeat stops at end-of-line and the following
    // `_nl` (consumed by the enclosing `config`/section body repeat) cleanly
    // separates this command_line from the next item.
    command_line: $ => prec.right(seq(
      field("name", $.identifier),
      repeat(field("arg", $._cmd_arg)),
    )),
    // `_cmd_arg` includes the section-header keywords (aliased back to
    // `value`) because tree-sitter's lexer will commit to the prec-2 keyword
    // tokenization whenever the keyword text appears mid-line in a position
    // where it COULD begin a sibling section (e.g. inside an interface body or
    // at top level between two sections). Without these aliases, a line like
    //   ip policy route-map BAR
    // would be split into `command_line(ip) + arg(policy)` followed by a
    // spurious `route_map_section` because the lexer produced the `route-map`
    // keyword token and `command_line`'s arg position couldn't accept it.
    // By accepting the keyword here (aliased to `value` so the AST stays
    // uniform), command_line can consume the keyword as a regular arg.
    _cmd_arg: $ => choice(
      $.value,
      $.output,
      alias($.route_map_kw, $.value),
      alias($.class_map_kw, $.value),
      alias($.policy_map_kw, $.value),
      alias($.vlan_kw, $.value),
      alias($.line_kw, $.value),
      alias($.redundancy_kw, $.value),
      alias($.access_list_kw, $.value),
      alias($.address_family_kw, $.value),
    ),

    interface_header: $ => seq(
      token(prec(2, "interface")),
      field("name", choice(
        // The `seq(interface_name, output)` alternative (e.g.
        // `interface Loopback{{ n }}`) is preferred over bare
        // `interface_name` via prec(1) — without it the GLR conflict
        // (`[$.interface_header]`) can resolve to the shorter match once the
        // body has `_nl`/other items to absorb the orphaned `output`.
        prec(1, seq($.interface_name, $.output)),
        $.interface_name,
        $.output,
      )),
    ),

    interface_name: $ => /[A-Za-z0-9_/.-]+/,

    // text excludes `!`, `{`, and `\n` so each token stays within a single
    // line — without the `\n` exclusion this catch-all would greedily swallow
    // every following line until the next `!`, eating real commands.
    //
    // The main token's first character must NOT be a word char (`\w`) AND must
    // NOT be whitespace (`\s`). Excluding `\w` routes word-leading lines to
    // `command_line`; excluding `\s` prevents text from greedily swallowing the
    // arg portion of a command line once the leading identifier has been
    // consumed (e.g. the leading space of ` address ...` after `ip`). With both
    // excluded, text only catches runs that begin with non-word punctuation
    // (stray symbols like `*`, `>`, `-`). The lone `{` branch stays for raw
    // Jinja. NB: this is a small deviation from the plan's literal regex
    // (`[^!\{\n\w]...`) — the whitespace exclusion is required because extras
    // skip the leading indent of body items, which would otherwise let text
    // out-compete `value` args on longest-match.
    eos: _ => token(prec(2, "!")),
    // ios_comment is line-bounded (`[^\n]`) so it cannot run across newlines.
    // Requires at least `! +<something>` (so a bare `!` still goes to `eos`);
    // given a real comment body, the longer match wins over `eos`.
    output: $ =>
      seq("{{", optional($._output_code), "}}"),
    _output_code: _ => prec.right(repeat1(/[^\s}\-+]+|[}\-+]/)),

    router_section: $ => seq(
      $.router_header,
      repeat(choice($._nl, $._body_item)),
      $.eos,
    ),

    router_header: $ => seq(
      token(prec(2, "router")),
      field("protocol", $.routing_protocol),
      // process_id is optional: most protocols carry one (bgp ASN, ospf
      // process-id, eigrp AS / named tag, isis area-tag) but classic `router
      // rip` has none.
      optional(field("process_id", choice($.value, $.output, seq($.value, $.output)))),
    ),

    routing_protocol: $ => choice(
      token(prec(2, "bgp")),
      token(prec(2, "ospf")),
      token(prec(2, "eigrp")),
      token(prec(2, "rip")),
      token(prec(2, "isis")),
    ),

    // Mirror of the documented BGP lexer-commit trap (see the DEFERRED comment
    // block ~line 797). `eigrp` is a prec-2 keyword via `routing_protocol`, so
    // a `eigrp <subcmd>` line inside a `router eigrp` body (eigrp
    // log-neighbor-changes, eigrp stub, eigrp metric, eigrp
    // log-neighbor-warnings, ...) cannot fall back to `command_line` — the
    // lexer commits to the keyword tokenization. This dedicated rule gives
    // those lines a parse.
    //
    // SECONDARY COLLISION (same class as the BGP `<subcmd>` trap above): if
    // the sub-command word is ITSELF a prec-2 keyword (notably `router-id`,
    // the first token of `router_id_statement`), the lexer commits to THAT
    // keyword mid-line and `eigrp_router_statement`'s arg-repeat cannot
    // consume it — so `eigrp router-id 1.1.1.1` splits into a bare
    // `eigrp_router_statement` + sibling `router_id_statement`. Classic-mode
    // `router eigrp <AS>` uses the unprefixed `router-id` form anyway (which
    // parses as `router_id_statement` directly), and named-mode AF bodies can
    // use `eigrp stub` / `eigrp log-neighbor-changes`. Resolving the
    // `eigrp router-id` split would require aliasing `router-id` into
    // `_cmd_arg` (collision risk across route-map `set router-id`, etc.) and
    // is left for a follow-up.
    //
    // RIP and IS-IS have no `<proto> ...` sub-commands inside their router
    // body, so they need no matching rule.
    address_family_section: $ => prec.dynamic(1, seq(
      $.address_family_header,
      repeat(choice($._nl, $._body_item)),
      $.eos,
    )),

    // `address-family ipv4` or `address-family vpnv4 unicast`. The name is the
    // AF identifier (ipv4, ipv6, vpnv4, ...); trailing modifiers (unicast,
    // multicast, vrf NAME) are captured as generic args. Follows the same
    // shape as route_map_header.
    address_family_header: $ => prec.right(seq(
      $.address_family_kw,
      field("name", choice($.value, $.output)),
      repeat(field("arg", $._cmd_arg)),
    )),

    // --- additional hierarchical sections ---------------------------------
    // These were previously DEFERRED (see the historic comment block at the
    // rich misc rules / `match_statement`). Each header promotes its leading
    // keyword to a prec-2 named token (`*_kw`) so it tokenizes as a keyword
    // rather than as `value`/`identifier` — that is what lets the header win
    // at line start (where `command_line` would otherwise consume the line via
    // the generic `identifier` + `repeat(arg)` fallback).
    //
    // LEXER COMMIT SAFETY: tree-sitter's lexer commits to the prec-2 keyword
    // tokenization whenever the keyword text appears, even in mid-line
    // positions where the parser COULD end the current rule and start a
    // sibling section. To keep `ip policy route-map BAR` and `switchport
    // access vlan 10` parsing as a single `command_line`, the section
    // keywords are also listed in `_cmd_arg` (aliased to `value`), so the
    // parser's arg-repeat can consume them as ordinary values.
    //
    // Each header carries a `field("name", ...)` (or for `line_header`, the
    // `type` + numeric args) so the LSP symbol table can index the definition
    // site. Bodies are uniform `repeat(choice($._nl, $._body_item))` — the
    // existing rich rules (`match_statement`, `set_statement`, `class_statement`,
    // `police_statement`, ...) all live in `_command` and thus work inside
    // these section bodies automatically.

    // Section-header keyword tokens (named so they can be aliased in
    // `_cmd_arg`). Each is prec-2 so it wins longest-match/tiebreak over the
    // generic `value`/`identifier` tokens at line start.
    vlan_kw: $ => token(prec(2, "vlan")),
    address_family_kw: $ => token(prec(2, "address-family")),

    vlan_section: $ => seq(
      $.vlan_header,
      repeat(choice($._nl, $._body_item)),
      $.eos,
    ),

    // `vlan N` (or `vlan NAME` for named VLANs in some contexts). The body
    // contains `name TEXT`, `private-vlan ...`, `remote-span`, etc.
    vlan_header: $ => prec.right(seq(
      $.vlan_kw,
      field("name", choice($.value, $.output)),
    )),

    address_family_statement: $ => prec.right(seq(
      token(prec(2, "address-family")),
      field("arg", repeat($._cmd_arg)),
    )),
    neighbor_statement: $ => prec.right(seq(
      token(prec(2, "neighbor")),
      field("arg", repeat($._cmd_arg)),
    )),
    network_statement: $ => prec.right(seq(
      token(prec(2, "network")),
      field("arg", repeat($._cmd_arg)),
    )),
    redistribute_statement: $ => prec.right(seq(
      token(prec(2, "redistribute")),
      field("arg", repeat($._cmd_arg)),
    )),
    passive_interface_statement: $ => prec.right(seq(
      token(prec(2, "passive-interface")),
      field("arg", repeat($._cmd_arg)),
    )),
    router_id_statement: $ => prec.right(seq(
      token(prec(2, "router-id")),
      field("arg", repeat($._cmd_arg)),
    )),
    // `exit-address-family` is a bare keyword with NO trailing args (it just
    // exits the AF sub-mode), so the rule is the keyword alone. Negation
    // (`no exit-address-family`) still works via the `negated_statement`
    // wrapper.
    exit_address_family_statement: $ => seq(
      token(prec(2, "exit-address-family")),
    ),
    metric_style_statement: $ => prec.right(seq(
      token(prec(2, "metric-style")),
      field("arg", repeat($._cmd_arg)),
    )),
    graceful_restart_statement: $ => prec.right(seq(
      token(prec(2, "graceful-restart")),
      field("arg", repeat($._cmd_arg)),
    )),
    queue_depth_statement: $ => prec.right(seq(
      token(prec(2, "queue-depth")),
      field("arg", repeat($._cmd_arg)),
    )),
    compatible_statement: $ => prec.right(seq(
      token(prec(2, "compatible")),
      field("arg", repeat($._cmd_arg)),
    )),
    auto_cost_statement: $ => prec.right(seq(
      token(prec(2, "auto-cost")),
      field("arg", repeat($._cmd_arg)),
    )),
